# ci-guardian

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRD.md  README.md  fly.toml  pyproject.toml
scripts/: simulate_webhook.py
src/ci_guardian/: __init__.py  config.py  main.py
src/ci_guardian/analysis/: __init__.py  claude.py  fixer.py  parser.py
src/ci_guardian/github/: __init__.py  logs.py  pr.py  repo.py
src/ci_guardian/notifications/: __init__.py  slack.py
src/ci_guardian/webhook/: __init__.py  handler.py  validator.py
tests/: __init__.py
tests/unit/: test_config.py  test_handler.py  test_parser.py  test_validator.py
